InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/vlocity_ins__ProductChildItem__c.object-meta.xml
<CustomObject>
    <description>Represents relationships between parent insurance products (such as plan types and policy types) and its child component specifications including coverages, insured parties and insured items. When insurance products are quoted, the child items are automatically added to the cart. Child object of Product (Product2).</description>
    <label>Product Child Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Child Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>