InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__AllowIndependentLifeCycle__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AllowIndependentLifeCycle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies child items and its hierarchy (if any) whose asset lifecycle can be managed independently from the root level offer.</description>
    <label>Allow Independent Life Cycle</label>
    <type>Checkbox</type>
</CustomField>