InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__ChildRecordType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ChildRecordType__c</fullName>
    <formula>vlocity_ins__ChildProductId__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Record Type</label>
    <type>Text</type>
</CustomField>