InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__CoverageCalculationFormula__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CoverageCalculationFormula__c</fullName>
    <label>Coverage Calculation Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>