InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__DefaultSelectedCriteria__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DefaultSelectedCriteria__c</fullName>
    <label>Default Selected Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>