InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GlobalKey__c</fullName>
    <description>The globally unique identifier of this Product Child Item. Used to identify the Product Child Item across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique Product Child Item identifier can be used.</description>
    <externalId>true</externalId>
    <label>Global Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>