InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__IsOptional__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsOptional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Optional</label>
    <type>Checkbox</type>
</CustomField>