InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__IsRootProductChildItem__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsRootProductChildItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to identify the root product child item record.
Only one will be allowed for each root product.</description>
    <label>Is Root Product Child Item</label>
    <type>Checkbox</type>
</CustomField>