InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__MinMaxDefaultQty__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MinMaxDefaultQty__c</fullName>
    <formula>TEXT(vlocity_ins__MinQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_ins__MaxQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_ins__Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min, Max, Default</label>
    <type>Text</type>
</CustomField>