InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__ParentRecordType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ParentRecordType__c</fullName>
    <formula>vlocity_ins__ParentProductId__r.vlocity_ins__RecordTypeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Record Type</label>
    <type>Text</type>
</CustomField>