InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__PricingSource__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PricingSource__c</fullName>
    <label>Pricing Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>