InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__SelectionMethodImplementation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SelectionMethodImplementation__c</fullName>
    <label>Selection Method Implementation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>