InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__SelectValidationMessage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SelectValidationMessage__c</fullName>
    <label>Select Validation Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>