InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__SeqNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SeqNumber__c</fullName>
    <formula>IF(ISBLANK( vlocity_ins__ParentProductChildItemId__c ), VALUE(vlocity_ins__ChildLineNumber__c), VALUE( vlocity_ins__ParentProductChildItemId__r.vlocity_ins__ChildLineNumber__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SeqNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>