InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/fields/vlocity_ins__SubParentSpecId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SubParentSpecId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Child Items (Sub Parent Product)</relationshipLabel>
    <relationshipName>ProductChildItems_subParent</relationshipName>
    <type>Lookup</type>
</CustomField>