InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/validationRules/vlocity_ins__ChildProductNonAssetizeRule.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__ChildProductNonAssetizeRule</fullName>
    <active>true</active>
    <description>Non Assetizable Product can only have Non Assetizable children</description>
    <errorConditionFormula>(vlocity_ins__ParentProductId__r.vlocity_ins__IsNotAssetizable__c &amp;&amp;  !vlocity_ins__ChildProductId__r.vlocity_ins__IsNotAssetizable__c )</errorConditionFormula>
    <errorMessage>Cannot add Assetizable Child Product to a Non Assetizable Parent Product</errorMessage>
</ValidationRule>