InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/validationRules/vlocity_ins__Max_less_than_Min.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__Max_less_than_Min</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ins__MaxQuantity__c  &lt;  vlocity_ins__MinQuantity__c</errorConditionFormula>
    <errorDisplayField>vlocity_ins__MaxQuantity__c</errorDisplayField>
    <errorMessage>Max Quantity must be greater than or equal to Min Quantity</errorMessage>
</ValidationRule>