InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/validationRules/vlocity_ins__Min_child_greater_than_Max_child_item.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__Min_child_greater_than_Max_child_item</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ins__MinimumChildItemQuantity__c &gt;  vlocity_ins__MaximumChildItemQuantity__c</errorConditionFormula>
    <errorMessage>Min Children Quantity must be less than or equal to Max Children Quantity</errorMessage>
</ValidationRule>