InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/validationRules/vlocity_ins__Min_greater_than_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__Min_greater_than_Max</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ins__MinQuantity__c  &gt;  vlocity_ins__MaxQuantity__c</errorConditionFormula>
    <errorDisplayField>vlocity_ins__MinQuantity__c</errorDisplayField>
    <errorMessage>Min Quantity must be less than or equal to Max Quantity</errorMessage>
</ValidationRule>