InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProductChildItem__c/validationRules/vlocity_ins__ParentProduct_cannot_be_ChildProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__ParentProduct_cannot_be_ChildProduct</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ins__ParentProductId__c == vlocity_ins__ChildProductId__c</errorConditionFormula>
    <errorDisplayField>vlocity_ins__ChildProductId__c</errorDisplayField>
    <errorMessage>Parent Product cannot be added as Child Product</errorMessage>
</ValidationRule>